# fintech-flow-dbt

./: .gitignore  README.md  dbt_project.yml  package-lock.yml  packages.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
models/staging/: sources.yml
tests/: assert_dim_customers_dates_logic.sql  assert_dim_customers_no_overlap.sql  assert_investment_pnl_is_logical.sql  assert_investment_prices_logic.sql  assert_loan_payment_components_sum.sql  assert_no_self_transfers.sql  assert_transfer_accounts_different.sql
